--- a/crm/src/SideBar.css
+++ b/crm/src/SideBar.css
@@ -2,9 +2,9 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  border-right: 2px solid;
+  border-right: 4px solid;
   border-radius: 0;
-  border-color: #13689c;
+  border-color: #265573;
   transition: 0.8s ease;
 
   position: fixed;
