--- a/crm/src/App.css
+++ b/crm/src/App.css
@@ -154,3 +154,21 @@ p {
   align-items: center;
   justify-content: space-between;
 }
+
+.side-bar {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  border-right: 4px solid;
+  border-radius: 0;
+  border-color: #265573;
+  transition: 0.8s ease;
+
+  position: fixed;
+  width: 240px;
+  left: 0px;
+  top: 0px;
+  bottom: 0px;
+  background: #265573;
+  box-shadow: 6px 0px 18px rgba(0, 0, 0, 0.06);
+}
