--- a/crm/src/App.css
+++ b/crm/src/App.css
@@ -68,7 +68,6 @@ h3 {
   font-weight: 500;
   font-size: 13px;
   line-height: 19px;
-  /* identical to box height */
 
   letter-spacing: 0.01em;
 
@@ -111,7 +110,7 @@ p {
   width: 20px;
   height: 20px;
 
-  color: white;
+  color: #cfd7e3;
 
   border: 0;
   box-sizing: border-box;
@@ -144,6 +143,7 @@ p {
 
   box-shadow: 0px 4px 10px rgba(16, 156, 241, 0.24);
   border-radius: 4px;
+  box-sizing: border-box;
 }
 
 .block {
