--- a/crm/src/App.css
+++ b/crm/src/App.css
@@ -165,6 +165,32 @@ p2 {
   color: #0075ff;
 }
 
+.p3{
+  position: absolute;
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 21px;
+  letter-spacing: 0.01em;
+  color: #000000;
+}
+
+.p4{
+  position: absolute;
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 13px;
+  line-height: 19px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.01em;
+  color: #109CF1;
+
+}
+
 .icon {
   position: absolute;
   width: 20px;
@@ -210,6 +236,13 @@ p2 {
   position: absolute;
   background: #265573;
   border-radius: 50.5px;
+}
+
+.button3 {
+  position: absolute;
+  background: '#FFFFFF'; 
+  height:'10%';
+  margin: 10;
 }
 
 .block {
