--- a/crm/src/App.css
+++ b/crm/src/App.css
@@ -45,8 +45,6 @@
 
 body {
   background: #f5f6f8;
-  width: 1200x;
-  height: 762px;
 }
 
 h1 {
@@ -168,7 +166,7 @@ p2 {
   color: #0075ff;
 }
 
-.p3{
+.p3 {
   position: absolute;
   font-family: Poppins;
   font-style: normal;
@@ -179,7 +177,7 @@ p2 {
   color: #000000;
 }
 
-.p4{
+.p4 {
   position: absolute;
   font-family: Poppins;
   font-style: normal;
@@ -190,8 +188,7 @@ p2 {
   align-items: center;
   text-align: center;
   letter-spacing: 0.01em;
-  color: #109CF1;
-
+  color: #109cf1;
 }
 
 .icon {
@@ -211,8 +208,7 @@ p2 {
 
   height: 60px;
   width: 860px;
-  left: 68px;
-  right: 383px;
+  left: 69px;
   top: 0px;
   /* white */
 
@@ -243,8 +239,8 @@ p2 {
 
 .button3 {
   position: absolute;
-  background: '#FFFFFF'; 
-  height:'10%';
+  background: "#FFFFFF";
+  height: "10%";
   margin: 10;
 }
 
