--- a/crm/src/App.css
+++ b/crm/src/App.css
@@ -252,6 +252,7 @@ p2 {
 
   background: #ffffff;
   border-radius: 4px;
+  filter: drop-shadow(1px 1px 1px rgba(0, 0, 0, 0.25));
 }
 
 .form-control-check {
@@ -276,5 +277,16 @@ p2 {
 }
 
 .logInBox {
+  filter: drop-shadow(6px 6px 8px rgba(0, 0, 0, 0.25));
+}
+
+.contactDisplay {
+  background: #fffcfc;
+  width: 78.6%;
+  height: 86%;
+  position: absolute;
+  left: 20%;
+  top: 10%;
+  right: 10%;
   filter: drop-shadow(6px 6px 8px rgba(0, 0, 0, 0.25));
 }
