--- a/crm/src/App.css
+++ b/crm/src/App.css
@@ -138,15 +138,12 @@ input {
 p1 {
   position: absolute;
   height: 28px;
-  left: 0px;
-  top: 0px;
 
   font-family: Roboto;
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
   line-height: 28px;
-  /* or 175% */
 
   text-align: center;
 
@@ -256,14 +253,14 @@ p2 {
   color: #0692be;
 }
 
-.p9{
+.p9 {
   font-family: Poppins;
   font-style: normal;
   font-weight: bold;
   font-size: 13px;
   line-height: 19px;
   letter-spacing: 0.01em;
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
 .icon {
@@ -314,9 +311,12 @@ p2 {
 
 .button3 {
   position: absolute;
-  background: "#FFFFFF";
-  height: "10%";
+  background: #ffffff;
+  height: 8%;
+  width: 12%;
   margin: 10;
+  top: 88%;
+  line-height: 13px;
 }
 
 .block {
@@ -364,4 +364,43 @@ p2 {
   top: 10%;
   right: 10%;
   filter: drop-shadow(6px 6px 8px rgba(0, 0, 0, 0.25));
+}
+
+.contactImage {
+  position: absolute;
+  top: 18%;
+  left: 50%;
+  border-radius: 50%;
+  width: 160px;
+  height: 160px;
+  display: block;
+  transform: translate(-50%, -50%);
+}
+
+.contactTitle {
+  position: absolute;
+  font-family: Poppins, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  letter-spacing: 0.01em;
+  color: #000000;
+
+  left: 50%;
+  top: 37%;
+  font-size: 36px;
+  transform: translate(-50%, -50%);
+}
+
+.contactSubtitle {
+  position: absolute;
+  font-family: Poppins, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  letter-spacing: 0.01em;
+  color: #000000;
+
+  left: 50%;
+  top: 44%;
+  font-size: 20px;
+  transform: translate(-50%, -50%);
 }
