--- a/crm/src/App.css
+++ b/crm/src/App.css
@@ -243,6 +243,7 @@ p2 {
   font-weight: 600;
   font-size: 10px;
   line-height: 18px;
+  position: absolute;
   /* identical to box height */
 
   display: flex;
@@ -250,6 +251,7 @@ p2 {
   text-align: center;
   letter-spacing: 0.01em;
 
+  cursor: pointer;
   color: #0692be;
 }
 
@@ -312,8 +314,8 @@ p2 {
 .button3 {
   position: absolute;
   background: #ffffff;
-  height: 8%;
-  width: 12%;
+  height: 10%;
+  width: 14%;
   margin: 10;
   top: 88%;
   line-height: 13px;
