--- a/crm/src/App.css
+++ b/crm/src/App.css
@@ -275,6 +275,7 @@ p2 {
   border: 0;
   box-sizing: border-box;
   border-radius: 1px;
+  cursor: pointer;
 }
 
 .search-bar {
@@ -412,8 +413,8 @@ p2 {
   width: 30%;
   height: 50%;
   position: absolute;
-  left: 59.5%;
-  top: 50%;
+  left: 53%;
+  top: 48%;
   transform: translate(-50%, -50%);
   filter: drop-shadow(6px 6px 8px rgba(0, 0, 0, 0.25));
 }
