--- a/crm/src/App.css
+++ b/crm/src/App.css
@@ -418,3 +418,11 @@ p2 {
   transform: translate(-50%, -50%);
   filter: drop-shadow(6px 6px 8px rgba(0, 0, 0, 0.25));
 }
+
+.contactDisplayPage {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0%;
+  top: 0%;
+}
