--- a/crm/src/App.css
+++ b/crm/src/App.css
@@ -97,6 +97,7 @@ h4 {
   color: #334d6e;
 
   opacity: 0.5;
+  transform: translate(-50%, -50%);
 }
 
 h5 {
@@ -137,7 +138,7 @@ p {
   /* white */
   line-height: 0px;
   font-size: 11px;
-  color: #109CF1;
+  color: #109cf1;
 }
 
 .signUpInput {
@@ -299,7 +300,7 @@ p2 {
   background: #ffffff;
 }
 
-.numInput{
+.numInput {
   position: absolute;
 }
 
@@ -350,14 +351,15 @@ p2 {
 }
 
 .block {
-  position: absolute;
+  /* position: absolute; */
   height: 48px;
-  width: 957px;
+  width: 100%;
   /* white */
 
   background: #ffffff;
   border-radius: 4px;
   filter: drop-shadow(1px 1px 1px rgba(0, 0, 0, 0.25));
+  margin-bottom: 0.2%;
 }
 
 .form-control-check {
@@ -376,7 +378,7 @@ p2 {
   transition: 0.8s ease;
 
   position: fixed;
-  width: 240px;
+  width: 18%;
   background: #265573;
   box-shadow: 6px 1px 18px rgba(0, 0, 0, 0.06);
 }
@@ -397,14 +399,20 @@ p2 {
 }
 
 .filterBar {
-  background: #fffcfc;
-  width: 20%;
+  width: 25%;
   height: 86%;
-  position: absolute;
-  left: 77.5%;
   top: 10%;
-  right: 10%;
-  filter: drop-shadow(6px 6px 8px rgba(0, 0, 0, 0.25));
+  left: 75%;
+
+  display: flex;
+  flex-direction: column;
+  border-radius: 0;
+  border-color: #265573;
+  transition: 0.8s ease;
+
+  position: fixed;
+  background: #ffffff;
+  box-shadow: 6px 1px 18px rgba(0, 0, 0, 0.06);
 }
 
 .contactImage {
