--- a/crm/src/App.css
+++ b/crm/src/App.css
@@ -308,8 +308,8 @@ p2 {
 .button1 {
   position: absolute;
 
-  width: 160px;
-  height: 42px;
+  width: 12%;
+  height: 7%;
   background: #265573;
   justify-content: "center";
 
@@ -319,6 +319,8 @@ p2 {
   box-shadow: 0px 4px 10px rgba(16, 156, 241, 0.24);
   border-radius: 4px;
   box-sizing: border-box;
+
+  cursor: pointer;
 }
 
 .button2 {
