--- a/crm/src/App.css
+++ b/crm/src/App.css
@@ -339,6 +339,24 @@ p2 {
   line-height: 13px;
 }
 
+.button4 {
+  position: absolute;
+
+  width: 20%;
+  height: 8%;
+  background: #265573;
+  justify-content: "center";
+
+  text-align: center;
+  line-height: 42px;
+
+  box-shadow: 0px 4px 10px rgba(16, 156, 241, 0.24);
+  border-radius: 4px;
+  box-sizing: border-box;
+
+  cursor: pointer;
+}
+
 .buttonFilter {
   position: absolute;
   background: #ffffff;
