--- a/crm/src/App.css
+++ b/crm/src/App.css
@@ -327,6 +327,7 @@ p2 {
   position: absolute;
   background: #265573;
   border-radius: 50.5px;
+  border: none;
 }
 
 .button3 {
@@ -493,4 +494,24 @@ p2 {
   position: absolute;
   left: 0%;
   top: 0%;
+}
+
+.addContact {
+  background: #fffcfc;
+  width: 60%;
+  height: 65%;
+  position: absolute;
+  left: 55%;
+  top: 45%;
+  transform: translate(-50%, -50%);
+  filter: drop-shadow(6px 6px 8px rgba(0, 0, 0, 0.25));
+}
+
+.addInput {
+  background: #f3efef;
+  border: 0;
+  height: 28px;
+  width: 35%;
+  position: absolute;
+  text-indent: 5px;
 }
