--- a/crm/src/App.css
+++ b/crm/src/App.css
@@ -501,7 +501,7 @@ p2 {
   filter: drop-shadow(6px 6px 8px rgba(0, 0, 0, 0.25));
 }
 
-.contactDisplayPage {
+.Page {
   width: 100%;
   height: 100%;
   position: absolute;
