--- a/crm/src/App.css
+++ b/crm/src/App.css
@@ -341,6 +341,13 @@ p2 {
   border: 0;
 }
 
+.search-bar2 {
+  position: absolute;
+  position: fixed;
+  background: #F0EBEB;
+  border: 0;
+}
+
 .numInput {
   position: absolute;
 }
@@ -567,6 +574,14 @@ p2 {
 .buttonCustomer {
   position: absolute;
   background: #265573;
+  border-radius: 50.5px;
+  border: none;
+  margin: 10;
+}
+
+.deleteButton {
+  position: absolute;
+  background: red;
   border-radius: 50.5px;
   border: none;
   margin: 10;
