--- a/crm/src/App.css
+++ b/crm/src/App.css
@@ -115,6 +115,21 @@ h4 {
   transform: translate(-50%, -50%);
 }
 
+.hvisits {
+  position: absolute;
+
+  font-family: Poppins, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 13px;
+  line-height: 19px;
+
+  letter-spacing: 0.01em;
+
+  color: #334d6e;
+
+  opacity: 0.5;
+}
 
 h5 {
   width: 476.15;
