--- a/crm/src/App.css
+++ b/crm/src/App.css
@@ -333,7 +333,8 @@ p2 {
 .search-bar {
   position: absolute;
 
-  height: 60px;
+  /* height: 60px; */
+  height: 9%;
   width: 860px;
   left: 69px;
   top: 0px;
@@ -460,12 +461,14 @@ p2 {
 
 .block {
   height: 48px;
+  /* height: 9%; */
   width: 100%;
 
   background: #ffffff;
   border-radius: 4px;
   filter: drop-shadow(1px 1px 1px rgba(0, 0, 0, 0.25));
   margin-bottom: 0.2%;
+  cursor: pointer;
 }
 
 .form-control-check {
@@ -511,10 +514,19 @@ p2 {
   width: 78.6%;
   height: 86%;
   position: absolute;
-  left: 20%;
-  top: 10%;
+  left: 20.4%;
+  top: 11.5%;
   right: 10%;
   filter: drop-shadow(6px 6px 8px rgba(0, 0, 0, 0.25));
+}
+
+.contactList {
+  position: absolute;
+  top: 11.5%;
+  left: 6%;
+  width: 14%;
+  height: 85%;
+  overflow-y: scroll;
 }
 
 .filterBar {
@@ -532,6 +544,34 @@ p2 {
   position: fixed;
   background: #ffffff;
   box-shadow: 6px 1px 18px rgba(0, 0, 0, 0.06);
+}
+
+.settingsDisplay {
+  background: #fffcfc;
+  width: 92%;
+  /* height: 86%; */
+  position: absolute;
+  left: 6.5%;
+  top: 11.5%;
+  right: 10%;
+  filter: drop-shadow(6px 6px 8px rgba(0, 0, 0, 0.25));
+}
+
+.pSettings {
+  position: absolute;
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 20px;
+  color: #707683;
+}
+
+.iconSettings {
+  position: absolute;
+  left: -17%;
+  top: 40%;
+  color: #265573;
 }
 
 .contactImage {
@@ -626,4 +666,23 @@ p2 {
   border-radius: 50.5px;
   border: none;
   margin: 10;
+}
+
+.changePassword {
+  background: #fffcfc;
+  width: 35%;
+  height: 55%;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.inputChangePassword {
+  position: absolute;
+  left: 15%;
+  background: #f0ebeb;
+  border: 0;
+  height: 9%;
+  width: 70%;
 }
