--- a/crm/src/App.css
+++ b/crm/src/App.css
@@ -398,15 +398,6 @@ p2 {
   border: 0;
 }
 
-.signUpInput {
-  position: absolute;
-  background: #f5f1f1;
-  border: 0;
-  height: 7%;
-  width: 35%;
-  text-indent: 5%;
-}
-
 .numInput {
   position: absolute;
 }
@@ -538,15 +529,22 @@ p2 {
 }
 
 .signUp {
-  filter: drop-shadow(6px 6px 8px rgba(0, 0, 0, 0.25));
-
-  background: #fffcfc;
-  width: 45%;
+  background: #ffffff;
+  width: 40%;
   height: 55%;
   position: absolute;
-  left: 50%;
-  top: 52.5%;
-  transform: translate(-50%, -50%);
+  left: 58%;
+  top: 36%;
+  filter: drop-shadow(6px 6px 8px rgba(0, 0, 0, 0.25));
+}
+
+.signUpInput {
+  position: absolute;
+  background: #f5f1f1;
+  border: 0;
+  height: 9%;
+  width: 35%;
+  text-indent: 5%;
 }
 
 .contactDisplay {
