--- a/crm/src/App.css
+++ b/crm/src/App.css
@@ -528,6 +528,24 @@ p2 {
   z-index: 10;
 }
 
+.sideBarLogo {
+  position: absolute;
+  width: 80px;
+  height: 80px;
+  left: 50%;
+  top: 6%;
+  transform: translate(-50%, -50%);
+}
+
+.SBCLogo {
+  position: absolute;
+  width: 45px;
+  height: 45px;
+  left: 86%;
+  top: 6%;
+  transform: translate(-50%, -50%);
+}
+
 .signUp {
   background: #ffffff;
   width: 40%;
