--- a/crm/src/App.css
+++ b/crm/src/App.css
@@ -820,8 +820,8 @@ p2 {
 }
 
 .loginImage {
-  width: 18%;
-  height: 100%;
+  width: 300px;
+  height: 300px;
   position: absolute;
   left: 5%;
   filter: drop-shadow(6px 6px 8px rgba(0, 0, 0, 0.25));
