--- a/crm/src/App.css
+++ b/crm/src/App.css
@@ -836,3 +836,14 @@ p2 {
   color: #2a8dbb;
   outline: none;
 }
+
+.completeHistory {
+  background: #ffffff;
+  width: 40%;
+  height: 55%;
+  position: absolute;
+  left: 40%;
+  top: 32%;
+  /* transform: translate(-50%, -50%); */
+  filter: drop-shadow(6px 6px 8px rgba(0, 0, 0, 0.25));
+}
