--- a/crm/src/App.css
+++ b/crm/src/App.css
@@ -502,7 +502,7 @@ p2 {
   background: #ffffff;
   border-radius: 4px;
   filter: drop-shadow(1px 1px 1px rgba(0, 0, 0, 0.25));
-  margin-bottom: 0.1%;
+  margin-bottom: 0.2%;
   cursor: pointer;
 }
 
@@ -937,4 +937,15 @@ p2 {
   top: 88%;
   line-height: 13px;
   cursor: pointer;
+}
+
+.recentContactImg {
+  position: absolute;
+  top: 50%;
+  left: 8%;
+  border-radius: 50%;
+  width: 27px;
+  height: 27px;
+  display: block;
+  transform: translate(-50%, -50%);
 }
