--- a/crm/src/App.css
+++ b/crm/src/App.css
@@ -212,6 +212,7 @@ ul {
   margin-left: 8%;
   font-size: 15px;
 }
+
 p2 {
   position: absolute;
   width: 114px;
@@ -884,7 +885,7 @@ p2 {
 }
 
 .statisticsDisplay {
-  background: #fffcfc;
+  background: #ffffff;
   width: 45%;
   height: 38%;
   position: absolute;
