--- a/crm/src/App.css
+++ b/crm/src/App.css
@@ -983,18 +983,18 @@ p2 {
 }
 
 .UploadPicture {
-  text-align: center;
-  height: "100px";
-  width: "100px";
+  /* text-align: center; */
+  height: "100%";
+  width: "100%";
 }
 
 .addPictureContainer {
   background: #fffcfc;
-  width: 30%;
-  height: 30%;
+  width: 18%;
+  height: 25%;
   position: absolute;
-  left: 50%;
-  top: 40%;
+  left: 18%;
+  top: 30%;
   transform: translate(-50%, -50%);
   filter: drop-shadow(6px 6px 8px rgba(0, 0, 0, 0.25));
 }
@@ -1006,8 +1006,8 @@ p2 {
   border: none;
   margin: 10;
   transform: translate(-50%, -50%);
-  width: 40%;
-  height: 15%;
+  width: 70%;
+  height: 50%;
   bottom: 0%;
 }
 
@@ -1018,7 +1018,7 @@ p2 {
   border: none;
   margin: 10;
   transform: translate(-50%, -50%);
-  width: 40%;
+  width: 80%;
   height: 15%;
   bottom: 0%;
   left: 50%;
