--- a/crm/src/App.css
+++ b/crm/src/App.css
@@ -775,6 +775,7 @@ p2 {
 .buttonCustomerDisabled {
   position: absolute;
   background: #484a4b;
+  opacity: 60%;
   border-radius: 50.5px;
   border: none;
   margin: 10;
